--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6 col-12">
-                            <h2 class="mb-lg-3 mb-3">cat food shop</h2>
+                            <h2 class="mb-lg-3 mb-3">toko makanan kucing</h2>
 
                             <p>Toko makanan kucing adalah tempat yang khusus menyediakan berbagai jenis makanan untuk kucing, dari makanan kering hingga makanan basah, 
                                 serta jenis makanan khusus sesuai dengan kebutuhan kesehatan kucing. Berikut beberapa aspek penting yang perlu dipertimbangkan jika ingin membuka atau mengelola toko makanan kucing</p>
@@ -174,14 +174,14 @@ https://templatemo.com/tm-566-medic-care
                 <div class="container">
                     <div class="row">
 
-                        <h2 class="text-center mb-lg-5 mb-4">our timeline with cats</h2>
+                        <h2 class="text-center mb-lg-5 mb-4">timeline kita dengan kucing</h2>
                         
                         <div class="timeline">
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">get cat food</h3>
+                                    <h3 class=" text-light">mendapatkan makanan kucing</h3>
 
-                                    <p> requires attention to nutrition, specific needs, and balanced diet. Here are some tips for providing the right food for cats so that their health remains optimal</p>
+                                    <p> memerlukan perhatian terhadap gizi, kebutuhan khusus, dan pola makan seimbang. Berikut beberapa tips memberikan makanan yang tepat untuk kucing agar kesehatannya tetap optimal</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -195,9 +195,9 @@ https://templatemo.com/tm-566-medic-care
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes my-lg-5 my-4">
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">consult your cat's health</h3>
+                                    <h3 class=" text-light">konsultasikan kesehatan kucing anda</h3>
 
-                                    <p> the process of consulting a veterinarian or animal health professional regarding your cat's health condition. This is important to ensure your cat gets proper care, both in disease prevention and treatment if sick <a href="https://www.google.com/search?q=free+css" target="_blank">Free CSS collection</a> website.</p>
+                                    <p> proses konsultasi dengan dokter hewan atau ahli kesehatan hewan mengenai kondisi kesehatan kucing anda. Hal ini penting untuk memastikan kucing Anda mendapatkan perawatan yang tepat, baik dalam pencegahan penyakit maupun pengobatan jika sakit <a href="https://www.google.com/search?q=free+css" target="_blank">Free CSS collection</a> website.</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -211,9 +211,9 @@ https://templatemo.com/tm-566-medic-care
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes">
                                 <div class="col-9 col-md-5 me-md-4 me-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">Certified Nurses</h3>
+                                    <h3 class=" text-light">Perawat bersertifikat kucing</h3>
 
-                                    <p>Phasellus eleifend, urna interdum congue viverra, arcu neque ultrices ligula, id pulvinar nisi nibh et lacus. Vivamus gravida, ipsum non euismod tincidunt, sapien elit fermentum mi, quis iaculis enim ligula at arcu.</p>
+                                    <p>Sertifikasi ini dapat diambil melalui kursus online, lembaga pendidikan, atau organisasi yang fokus pada kesejahteraan hewan. Dengan memiliki sertifikat ini, perawat kucing dapat memberikan perawatan yang lebih baik dan lebih aman bagi hewan peliharaan</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
@@ -227,11 +227,11 @@ https://templatemo.com/tm-566-medic-care
 
                             <div class="row g-0 justify-content-end justify-content-md-around align-items-start timeline-nodes my-lg-5 my-4">
                                 <div class="col-9 col-md-5 ms-md-4 ms-lg-0 order-3 order-md-1 timeline-content bg-white shadow-lg">
-                                    <h3 class=" text-light">cat character who maintains cleanliness</h3>
+                                    <h3 class=" text-light">karakter kucing yang menjaga kebersihan</h3>
 
-                                    <p class="mb-0 pb-0">Cats properly require attention to nutrition, specific needs, and dietary balance.</p>
+                                    <p class="mb-0 pb-0">Kucing memang membutuhkan perhatian terhadap nutrisi, kebutuhan spesifik, dan keseimbangan makanan.</p>
                                     
-                                    <p>Provide special food for kittens that is rich in protein, fat and important nutrients for growth. Make sure the label on the product states the food is for kittens</p>
+                                    <p>Berikan makanan khusus anak kucing yang kaya akan protein, lemak dan nutrisi penting untuk pertumbuhannya. Pastikan label pada produk menyatakan makanan tersebut untuk anak kucing</p>
                                 </div>
 
                                 <div class="col-3 col-sm-1 order-2 timeline-icons text-md-center">
